# my_first_python_project

./: .cz-config.js  .flake8  .gitignore  .pylintrc  README.md  mypy.ini  package-lock.json  package.json  project.json  pyproject.toml  ruff.toml
.husky/: pre-commit
examples/src/: Employee.py  Lenguaje.py  archivos.py  ciclos.py  clases.py  clases_2.py  evaluaciones.txt  excepciones.py  expresiones_lambdas.py  frases.txt  funciones_lambdas.py  importaciones.py  language_model.py  lista.py  mapas.py  modulo.py  recursividad.py  tuplas.py
examples/src/models/: person_request_model.py
examples/src/utils/: helper.py  session.py
fast_api/: main.py
fast_api/documentation/: Request.py  openapi-documentation.json  openapi.py
fast_api/model/: role.py  todo_model.py  user_model.py
fast_api/routers/: user_router.py
fast_api/schemas/user/: user_create_request.py  user_create_response.py  user_create_response_mapper.py
fast_api/scripts/: create_tables.py
fast_api/services/user/: user_service.py
fast_api/utils/: database.py
my_fastapi/v1/: main.py
my_fastapi/v1/model/: todo_model.py  user_model.py
my_fastapi/v1/routers/: user_router.py
my_fastapi/v1/schemas/user/create/: user_create_request.py  user_create_response.py  user_create_response_mapper.py
my_fastapi/v1/scripts/: create_tables.py
my_fastapi/v1/services/user/: user_service.py
my_fastapi/v1/utils/: database.py  settings.py
tests/: test_helper.py  test_session.py
tests/models/: test_language_model.py  test_person_request_model.py
